fix alignment of the dropdown

--- a/src/style.css
+++ b/src/style.css
@@ -186,6 +186,7 @@ input[type="text"]:focus {
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
+    margin-left: -32px;
 }
 
 .more-actions-button:hover+.more-actions-dropdown {
